# napari-3d-label-eraser

./: README.md  pyproject.toml
napari_3d_label_eraser/: __init__.py  _widget.py  napari.yaml
napari_3d_label_eraser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
