[project]
name = "napari-3d-label-eraser"
version = "0.1.1"
description = "Simple napari plugin to erase the current label value in 3D for an entire Labels volume."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Clément Cazorla", email = "clement.cazorla31@gmail.com"},
]
dependencies = [
  "napari[all]>=0.4.18",
  "magicgui>=0.7",
  "numpy",
]

[project.urls]
"Source" = "https://example.com/napari-3d-label-eraser"

[project.entry-points."napari.manifest"]
napari-3d-label-eraser = "napari_3d_label_eraser:napari.yaml"

[tool.setuptools]
packages = ["napari_3d_label_eraser"]

[tool.setuptools.package-data]
"napari_3d_label_eraser" = ["napari.yaml"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
